samples/_failures_safe/1761501499_db4eb1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_94b02158.c: In function ‘main’:
./samples/SAFE/__tmp_94b02158.c:145:32: error: missing terminating " character
  145 |                         printf("No
      |                                ^~~
./samples/SAFE/__tmp_94b02158.c:145:25: error: expected expression at end of input
  145 |                         printf("No
      |                         ^~~~~~
./samples/SAFE/__tmp_94b02158.c:145:25: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_94b02158.c:145:25: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_94b02158.c:145:25: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_94b02158.c:145:25: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_94b02158.c:145:25: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_94b02158.c:145:25: error: expected declaration or statement at end of input
